# Turn-base-fight

./: CMakeLists.txt  README.md  TBFight  main.cpp  spellList.json
Action/: Action.cpp  Action.h
BattleField/: BattleField.cpp  BattleField.h
Controller/: Controller.cpp  Controller.h
Enemy/: Enemy.cpp  Enemy.h
Hero/: Hero.cpp  Hero.h
Spell/: Spell.cpp  Spell.h
Squad/: Squad.cpp  Squad.h
Swarm/: Swarm.cpp  Swarm.h
Timer/: Timer.cpp  Timer.h
Unit/: Unit.cpp  Unit.h
lib/Key/: Key.cpp  KeyPlus.h
lib/nlohmann_json/: CMakeLists.txt
